<resources>
    <string name="app_name">GyanBooster</string>
    <string name="create_new_account">Create new Account</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_fullname">Full Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_mobile">Mobile</string>
    <string name="register">REGISTER</string>
    <string name="select_your_course">SELECT YOUR COURSE</string>
    <string name="classes_8_12">CLASSES 8 - 12</string>
    <string name="caption">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="class_8th">Class 8th</string>
    <string name="class_9th">Class 9th</string>
    <string name="class_12th">Class 12th</string>
    <string name="class_11th">Class 11th</string>
    <string name="class_10th">Class 10th</string>
    <string name="course">Course</string>
    <string name="amount">Amount</string>
    <string name="apply_now">Apply Now</string>
    <string name="pay_now">Pay Now</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="card_number">Card Number</string>
    <string name="name_on_card">Name on Card</string>
    <string name="cvv_number">CVV Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="in_the_next_step">Note : In the next step you will be redirect to your bank\'s website to verify yourself.</string>
    <string name="back">Back</string>
    <string name="faqs">Faq\'s</string>
    <string name="video">Video</string>
    <string name="placeholder">Placeholder</string>
    <string name="type_your_query">Type your query</string>
    <string name="buy_now">Buy Now</string>
    <string name="your_review">Your Review</string>
    <string name="choose_your_star_rating">Choose Your Star Rating</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="engineering_video_lesson">Engineering Video Lesson</string>
    <string name="simple_effective_video">Simple and effective Video Covering All Concepts</string>
    <string name="unlimited_analysis">Unlimited Text &amp; Analysis</string>
    <string name="personalised_learning">Personalised Learning</string>
    <string name="payment">PAYMENT</string>
    <string name="popular_videos">POPULAR VIDEO</string>
    <string name="send">Send</string>
    <string name="somethingWentWrong">Something Went Wrong. Please try again later</string>
    <string name="email_validation_message">Email can\'t be blank!</string>
    <string name="query_message">Query can\'t be blank!</string>
    <string name="email_phone_validation_message">Please enter email or phone number.</string>
    <string name="name_validation_message">Name can\'t be blank!</string>
    <string name="invalid_email">Invalid Email.</string>
    <string name="invalid_password">Password can\'t be blank!</string>
    <string name="review_msg_blank">Review can\'t be blank!</string>
    <string name="review_rating_blank">Rating can\'t be blank!</string>
    <string name="invalid_sub">Subject can\'t be blank!</string>
    <string name="confirmed_invalid_password">Confirm password can\'t be blank!</string>
    <string name="invalid_mobile_number">Mobile number can\'t be blank!</string>
    <string name="enter_amount">Amount can\'t be blank!</string>
    <string name="enter_otp_forgot">OTP can\'t be blank!</string>

    <string name="network_connection">Please check internet connection</string>
    <string name="password_confirm_password">Confirm password should be same as password.</string>
    <string name="mobile_number">Incorrect mobile number.</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="hint_otp">OTP</string>
    <string name="resend">Resend</string>
    <string name="email">Email</string>
    <string name="sms">SMS</string>
    <string name="both">Both</string>
    <string name="validate">Validate</string>
    <string name="screen_title_category">CATEGORY</string>

    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="please_select_otp_type">Please select OTP Type.</string>
    <string name="screen_title_video">VIDEO</string>
    <string name="phone">Phone : </string>
    <string name="email_show">Email : </string>
    <string name="name">Name</string>
    <string name="screen_title_checkout">CHECKOUT</string>
    <string name="screen_title_payment">PAYMENT</string>
    <string name="payable_price">Payable Price : </string>
    <string name="total_price">Total Price : </string>
    <string name="discount_price">Discount Price : </string>
    <string name="Rs">\u20B9</string>
    <string name="mobile">Phone</string>
    <string name="do_you_want_to_logout">Do you want to Log Out ?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="about_us">About Us</string>
    <string name="conpany_info">Company Information</string>
    <string name="logout">Logout</string>
    <string name="home_profile">HOME - PROFILE</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="your_courses">YOUR COURSES</string>
    <string name="profile_details">PROFILE DETAILS</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="profile_image">Profile Image</string>
    <string name="choose_file">Choose File</string>
    <string name="no_file_choosen">No File Chosen</string>
    <string name="submit">Submit</string>
    <string name="profile">Profile</string>
    <string name="hello">Hello </string>
    <string name="referral_code">Referral Code : </string>
    <string name="wallet_amount">Wallet Amount : </string>
    <string name="home_success">HOME - SUCCESS</string>
    <string name="visit_your_course">Visit Your Course</string>
    <string name="screen_title_success">Success</string>
    <string name="transaction_id">Transaction ID :</string>
    <string name="user_name">User :</string>
    <string name="file_size_alert">Can\'t Attach file more than 10mb in size</string>
    <string name="no_internet_try_again">No internet, Try again!</string>
    <string name="contact_us">Contact Us</string>
    <string name="call_us">Call Us</string>
    <string name="call_us_no">88-13-960-960</string>
    <string name="location">Location</string>
    <string name="location_address">Address : House no 1253 , sector 45 gurugram Haryana</string>
    <string name="email_address">info@gyanbooster.com</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="all_video">All Videos</string>
    <string name="new_password">New Password</string>
    <string name="hint_email_phone">Email or Phone</string>
    <string name="download">Download</string>
    <string name="downloaded">Downloaded!!</string>
    <string name="downloaded_started">Download Started!!</string>
    <string name="offline_videos">Offline Videos</string>


</resources>
