<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Framelayout to display Fragments -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/frame_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimen_50dp"
            android:background="@android:color/white" />

        <android.support.v7.widget.CardView
            android:id="@+id/ryHeader"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp"
            card_view:cardBackgroundColor="@android:color/white"
            card_view:cardElevation="@dimen/dimen_2dp"
            card_view:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/drawerSlideIcon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dimen_2dp"
                android:src="@mipmap/drawer_list_icon"
                android:tint="@android:color/black" />


            <TextView
                android:id="@+id/tv_screen_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_toRightOf="@+id/drawerSlideIcon"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_18sp"
                android:textStyle="bold" />


        </android.support.v7.widget.CardView>


    </RelativeLayout>

    <!-- Listview to display slider menu -->

    <LinearLayout
        android:id="@+id/layout_main"
        android:layout_width="@dimen/dimen_240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@mipmap/loginbg"
        android:clickable="true"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_10dp">

            <ImageView
                android:id="@+id/iv_avator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/logo" />

            <LinearLayout
                android:id="@+id/lin_login_logout_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_avator"
                android:layout_marginLeft="@dimen/dimen_5dp"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/login_signup_buttons"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/outer_line_oragne"
                        android:orientation="horizontal"

                        android:padding="@dimen/dimen_5dp">

                        <TextView
                            android:id="@+id/txtLogin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/dimen_10dp"
                            android:padding="@dimen/dimen_5dp"
                            android:text="@string/login"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/txt_12sp" />


                        <TextView
                            android:id="@+id/txtRegister"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/dimen_5dp"
                            android:text="@string/register"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/txt_12sp" />

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen_10dp">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="phone"
                android:textColor="@color/txt_orange" />

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="phone"
                android:textColor="@color/txt_orange" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="email"
                android:textColor="@color/txt_orange" />

            <TextView
                android:id="@+id/tvProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/profile"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tvCourses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/course"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tvAboutUs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/about_us"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tvCompanyInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/conpany_info"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tvContactUs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/contact_us"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tvOfflineVideos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/offline_videos"
                android:visibility="gone"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tvLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/logout"
                android:textColor="@android:color/black" />
        </LinearLayout>


    </LinearLayout>


</android.support.v4.widget.DrawerLayout>