<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"

    android:id="@+id/activity_main_done"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <android.support.v7.widget.CardView
            android:id="@+id/ryHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            app:cardUseCompatPadding="true"
            card_view:cardBackgroundColor="@android:color/white"
            card_view:cardElevation="@dimen/dimen_2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:padding="@dimen/dimen_5dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ryTop"
                    android:background="@android:color/white"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimen_5dp"
                        android:text="@string/enter_otp"
                        android:textColor="@color/txt_orange"
                        android:textSize="@dimen/txt_16sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ryTop"
                        android:background="@android:color/white"
                        android:orientation="vertical"
                        android:padding="@dimen/dimen_5dp">


                        <EditText
                            android:id="@+id/etOTP"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dimen_50dp"
                            android:layout_marginTop="@dimen/dimen_5dp"
                            android:gravity="center"
                            android:hint="@string/hint_otp"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@color/txt_orange"
                            android:textColorHint="@android:color/black"
                            android:textSize="@dimen/txt_14sp" />

                        <RadioGroup
                            android:id="@+id/radioGroup"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            android:layout_below="@+id/imageView">

                            <RadioButton
                                android:id="@+id/rbEmail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="false"
                                android:text="@string/email"
                                android:textSize="@dimen/txt_12sp" />

                            <RadioButton
                                android:id="@+id/rbSMS"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="false"
                                android:text="@string/sms"
                                android:textSize="@dimen/txt_12sp" />

                            <RadioButton
                                android:id="@+id/rbBoth"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="false"
                                android:text="@string/both"
                                android:textSize="@dimen/txt_12sp" />
                        </RadioGroup>


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ryTop"
                        android:background="@android:color/white"
                        android:orientation="horizontal"
                        android:padding="@dimen/dimen_5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/dimen_5dp"
                            android:id="@+id/txtResend"
                            android:layout_weight="1"
                            android:background="@drawable/login_btn_draweble_bt"
                            android:gravity="center"
                            android:paddingBottom="@dimen/dimen_5dp"
                            android:paddingLeft="@dimen/dimen_10dp"
                            android:paddingRight="@dimen/dimen_10dp"
                            android:paddingTop="@dimen/dimen_5dp"
                            android:text="@string/resend"
                            android:textColor="@android:color/white" />


                        <TextView
                            android:id="@+id/txtValidate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/dimen_10dp"
                            android:layout_weight="1"
                            android:background="@drawable/login_btn_draweble_bt"
                            android:gravity="center"
                            android:paddingBottom="@dimen/dimen_5dp"
                            android:paddingLeft="@dimen/dimen_10dp"
                            android:paddingRight="@dimen/dimen_10dp"
                            android:paddingTop="@dimen/dimen_5dp"
                            android:text="@string/validate"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:id="@+id/txtBack"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/dimen_10dp"
                            android:layout_weight="1"
                            android:background="@drawable/outer_field"
                            android:gravity="center"
                            android:paddingBottom="@dimen/dimen_5dp"
                            android:paddingLeft="@dimen/dimen_10dp"
                            android:paddingRight="@dimen/dimen_10dp"
                            android:paddingTop="@dimen/dimen_5dp"
                            android:text="@string/back"
                            android:textColor="@android:color/black" />

                    </LinearLayout>


                </LinearLayout>
            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>