<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/class_btn_draweble_bt"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/dimen_5dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/txt_orange"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/dimen_5dp"
                android:text="@string/course"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/dimen_5dp"
                android:text="@string/amount"
                android:textColor="@android:color/white" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_5dp"

            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Mathematics"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="2000"
                android:textColor="@android:color/black" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen_5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="@dimen/dimen_5dp"
                android:text="Total price : 2000"
                android:textColor="@color/txt_orange" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="@dimen/dimen_5dp"
                android:paddingTop="@dimen/dimen_5dp"
                android:text="Discount Price : 1000"
                android:textColor="@color/txt_orange" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="@dimen/dimen_5dp"
                android:paddingTop="@dimen/dimen_5dp"
                android:text="Payable Price : 1000"
                android:textColor="@color/txt_orange" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dimen_5dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/et_gray_btn_draweble_bt"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et_white_btn_draweble_bt"
                    android:hint="@string/coupon_code"
                    android:inputType="text"
                    android:paddingBottom="@dimen/dimen_5dp"
                    android:paddingLeft="@dimen/dimen_10dp"
                    android:paddingRight="@dimen/dimen_10dp"
                    android:paddingTop="@dimen/dimen_5dp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/txt_14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:background="@drawable/login_btn_draweble_bt"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dimen_5dp"
                    android:paddingLeft="@dimen/dimen_10dp"
                    android:paddingRight="@dimen/dimen_10dp"
                    android:paddingTop="@dimen/dimen_5dp"
                    android:text="@string/apply_now"
                    android:textColor="@android:color/white" />
            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dimen_5dp"
                android:background="@drawable/login_btn_draweble_bt"
                android:gravity="center"
                android:paddingBottom="@dimen/dimen_5dp"
                android:paddingLeft="@dimen/dimen_10dp"
                android:paddingRight="@dimen/dimen_10dp"
                android:paddingTop="@dimen/dimen_5dp"
                android:text="@string/pay_now"
                android:textColor="@android:color/white" />


        </LinearLayout>


    </LinearLayout>


</android.support.v7.widget.CardView>